--- a/glow-frontend/src/App.css
+++ b/glow-frontend/src/App.css
@@ -14,3 +14,10 @@
 -o-transform: translateX(-80%);
 transform: translateX(-80%);
 }
+
+.textBox {
+  background: #a599f9;
+    width: 100px;
+    height: 100px;
+    border-radius: 6px 12px 18px 24px;
+}
