--- a/glow-frontend/src/App.css
+++ b/glow-frontend/src/App.css
@@ -17,7 +17,162 @@ transform: translateX(-80%);
 
 .textBox {
   background: #a599f9;
-    width: 100px;
-    height: 100px;
-    border-radius: 6px 12px 18px 24px;
+    width: 200px;
+    height: 200px;
+    border-radius: 15px;
+    padding: 5px;
+    margin: 35px;
+
+    word-wrap: break-word
+}
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,600,700";
+* {
+    box-sizing: border-box;
+}
+
+
+body {
+    background: none repeat scroll 0 0 #fff;
+    color: #FFFFFF;
+    font-family: "Open Sans";
+    line-height: 26px;
+    width: 400px;
+    margin: 0 auto;
+    overflow-X: hidden;
+    position: relative;
+}
+.left {
+  position: absolute;
+  top: 0;
+  left: 35px;
+  font-size: 18px
+}
+
+.left:after {
+    border: 3px solid #2095FE;
+    border-right: 3px solid transparent;
+    border-top: 3px solid transparent;
+    content: " ";
+    height: 14px;
+    left: -20px;
+    position: absolute;
+    top: 20px;
+    -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+    width: 14px;
+}
+.right {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 18px
+}
+header {
+  color: #2095FE;
+  background: #eee;
+  border: 1px solid #ccc;
+  border-bottom: 1px solid #bbb;
+  box-shadow: 0 1px 2px rgba(1,1,1,0.2);
+  height: 60px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 58px;
+  white-space: nowrap;
+
+}
+header h2 {
+  font-weight: bold;
+  color: #111111;
+}
+
+img {
+  border-radius: 16%;
+}
+
+.img-display-right {
+  margin-right: 64px;
+}
+.img-display-left {
+  margin-left: 100px;
+}
+
+.messages-wrapper {
+  padding-top: 10px;
+  position: relative;
+  border: 1px solid #ddd;
+  border-top: 0 none;
+}
+.message {
+    border-radius: 20px 20px 20px 20px;
+    margin: 0 15px 10px;
+    padding: 15px 20px;
+    position: relative;
+    word-wrap: break-word
+
+}
+.message.to {
+    background-color: #a599f9;
+    color: #fff;
+    margin-left: 80px;
+}
+
+.display-button-right{
+  margin-right: 165px;
+  margin-bottom:  10px;
+}
+.display-right {
+  margin-right: 225px;
+}
+
+.display-button-left{
+  margin-left: 165px;
+}
+.display-left {
+  margin-left: 250px;
+}
+
+.message.from {
+    background-color: #E5E4E9;
+    color: #363636;
+    margin-right: 80px;
+}
+
+.message.to + .message.to,
+.message.from + .message.from {
+  margin-top: -7px;
+}
+
+.message.from:before {
+    border-color: #E5E4E9;
+    left: -50px;
+    transform: rotateY(180deg);
+}
+
+
+/* NAVBAR */
+.mobile-wrapper{
+	width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.mobile{
+	max-width: 300px;
+	width: 100%;
+	height: 500px;
+	background-color: #eee;
+	overflow: hidden;
+	position: relative;
+	display: inline-block;
+}
+
+.mobile .header{
+	background-color: #19a974;
+	color: #fff;
+	padding: 10px;
+}
+
+a{
+	text-decoration: none;
 }
