--- a/glow-frontend/src/App.css
+++ b/glow-frontend/src/App.css
@@ -94,7 +94,7 @@ img {
   margin-right: 64px;
 }
 .img-display-left {
-  margin-left: 100px;
+  margin-left: 220px;
 }
 
 .messages-wrapper {
@@ -114,7 +114,7 @@ img {
 .message.to {
     background-color: #a599f9;
     color: #fff;
-    margin-left: 80px;
+    margin-left: 175px;
 }
 
 .display-button-right{
@@ -122,20 +122,20 @@ img {
   margin-bottom:  10px;
 }
 .display-right {
-  margin-right: 225px;
+  margin-right: 385px;
 }
 
 .display-button-left{
   margin-left: 165px;
 }
 .display-left {
-  margin-left: 250px;
+  margin-left: 400px;
 }
 
 .message.from {
     background-color: #E5E4E9;
     color: #363636;
-    margin-right: 80px;
+    margin-right: 175px;
 }
 
 .message.to + .message.to,
@@ -150,29 +150,29 @@ img {
 }
 
 
-/* NAVBAR */
-.mobile-wrapper{
-	width: 100%;
-    margin: 0 auto;
-    text-align: center;
+.grid.container {
+  margin-top: 5em;
 }
-
-.mobile{
-	max-width: 300px;
-	width: 100%;
-	height: 500px;
-	background-color: #eee;
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
 	overflow: hidden;
-	position: relative;
-	display: inline-block;
-}
-
-.mobile .header{
-	background-color: #19a974;
-	color: #fff;
-	padding: 10px;
+	position: absolute;
+	z-index: -1;
 }
 
 a{
 	text-decoration: none;
 }
+
+.ui.menu .item.eric{
+  padding: 0px !important;
+}
+
+.ui.secondary.menu .item.eric{
+  padding: 0px !important;
+}
+
+
+/* LeaderBoard */
